--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Hlf\\FlysystemUfile\\UfileServiceProvide"
+                "Hlf\\FlysystemUfile\\UfileServiceProvider"
             ]
         }
     }
